fixOverflow

--- a/wp-content/themes/new_theme/development/sass/components/_general.sass
+++ b/wp-content/themes/new_theme/development/sass/components/_general.sass
@@ -47,7 +47,9 @@
   position: absolute
   min-width: 100%
   height: 100%
-  overflow: scroll;
+  overflow: hidden
+  overflow-x: auto
+
 
 .paysage
   position: absolute
